fixtures/valid/sql-string-documentation/src/core/public.ts
export const sqlExample = "select * from orders";
