fixtures/invalid/duplicate-cell-ids/src/one/public.ts
export const oneValue = 1;
